hphp/hack/test/typecheck/namespace_global_builtin2.php.exp
File "namespace_global_builtin2.php", line 20, characters 7-12:
You cannot implement sealed interface Traversable (Typing[4238])
File "interfaces.hhi", line 46, characters 11-21:
Declaration is here
